[project]
name = "leaf-tab"
version = "1.1.0"
description = "LeafTab: The Cannalyzer -- their inventory, your insights -- organized, optimized"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "requests>=2.32.5",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "dependency-check>=0.6.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.11.4",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
